# stellarpay

./: .gitignore  README.md  contract_deployment_summary.txt  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/: test_admin_functions.1.json  test_edge_case_exceed_cap.1.json  test_edge_case_unauthorized_logger_call.1.json  test_edge_case_unauthorized_vault_withdrawal.1.json  test_edge_case_zero_donation.1.json  test_full_donation_flow_end_to_end.1.json
contracts/test_snapshots/test/: test_cap_enforcement.1.json  test_donation.1.json  test_donation_flow.1.json  test_negative_donation.1.json  test_set_cap_unauthorized.1.json  test_set_donation_cap.1.json  test_top_donors.1.json
contracts/tests/: integration_test.rs
logger_contract/: Cargo.toml  README.md
logger_contract/src/: lib.rs  test.rs
logger_contract/test_snapshots/test/: test_already_initialized.1.json  test_log_donation.1.json  test_log_negative_amount.1.json  test_logger_full_flow.1.json  test_unauthorized_log.1.json
src/: App.css  App.jsx  App.test.jsx  index.css  main.jsx  setupTests.js
src/components/: AdminPanel.jsx  AnalyticsDashboard.jsx  DonorLeaderboard.jsx  LiveDonationFeed.jsx  Navbar.jsx  RecentLogs.jsx  SendXLMForm.jsx  TopDonors.jsx  TransactionStatus.jsx  VaultStats.jsx  WalletCard.jsx
src/pages/: AdminPortal.jsx  CampaignDetails.jsx  DonorMarketplace.jsx  Landing.jsx
vault_contract/: Cargo.toml
vault_contract/src/: lib.rs  test.rs
(+3 files in other folders)
